css/styles.scss
---
---

@import url('https://fonts.googleapis.com/css2?family=Rowdies:wght@300&display=swap');

* {
  margin: 0;
  padding: 0;
}

html {
  overflow-y: scroll;
}

h1, h2, h3, h4, h5, h6 {
  margin: 8px 0;
  padding-top: 20px;
  font-family: 'Rowdies', cursive;
}

p {
  font-family: Arial, Helvetica, sans-serif;
  font-size: 15pt;
  margin: 0;
  line-height: 1.5;
  word-break: break-word;
  overflow-wrap: break-word;
  word-wrap: break-word;
}

.no-select-txt {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.posts-tables {
  margin: 15px;
  float: left;
}

.posts-tables td, .posts-tables th {
  padding: 6px;
  border: whitesmoke solid 2px;
}

blockquote {
  border-left: solid green 3px;
  padding-left: 15px;
  margin-left: 15px;
}

.post-content, .blog-content {
  padding: 8px;
}

.blog-content {
  margin: 90px auto 32px;
  max-width: 920px;
  overflow-wrap: break-word;
  word-wrap: break-word;
}

.blog-content p {
  padding-bottom: 20px;
  padding-top: 10px;
}

.blog-content h1 {
  font-size: 38pt;
}

.blog-content h2 {
  font-size: 30pt;
}

.blog-content h3 {
  font-size: 20pt;
}

.img-caption-include-dynamic-left, .img-caption-include-dynamic-right {
  margin: 10px;
  width: 40%;
  height: auto;
  text-align: center;
}

.img-caption-include-dynamic-left {
  float: left;
}

.img-caption-include-dynamic-right {
  float: right;
}

.img-caption-include-dynamic-left img, .img-caption-include-dynamic-right img  {
  border: solid green 1px;
  background-color: rgb(107, 107, 107);
  width: 100%;
  height: auto;
}


.img-caption-include {
  width: 100%;
  text-align: center;
}

.img-caption-include figcaption {
  margin: 5px;
  font-style: italic;
}

.img-caption-include img {
  border: solid green 1px;
  background-color: rgb(107, 107, 107);
  width: 100%;
  height: auto;
}

.post-content {
  margin: 0px auto 0px auto;
  max-width: 1250px;
  text-align: center;
}

a, a:link {
  color: #078b00;
  text-decoration: none;
}

.anc-hover:hover, a:hover {
  color: #0dc200;
  text-decoration: none;
}

.posts-pagination-table {
  width: 100%;
}

.posts-container-shadow {
  box-shadow: whitesmoke 0px 10px 20px;
}

.ng-cloak {
  display: none !important;
}

/* NAV */

.navbar {
  border-bottom: solid rgb(39, 39, 39) 1px;
  min-height: 70px;
}

.navbar-dark .nav-link {
  min-width: 90px;
  text-align: center;
  font-size: 16pt;
  font-weight: bold;
  font-style: oblique;
  color: #078b00;
  font-family: 'Rowdies', cursive;
}

.navbar-brand {
  // position: relative;
  margin: 0px;
  padding: 5px;
  height: auto;
}

.navbar-brand img {
  position: absolute;
  height: 70px;
  top: 0;
  margin: 10px;
  padding: 0;
}

.navbar-brand img:hover {
  animation: twitching 2s infinite;
}

/* footer */

.footer-disclaimer {
  font-size: 9pt;
}

.show-consent-banner {
  border-top: solid black 2px;
  z-index: 2;
  position: fixed;
  bottom: 0;
  height: 200px;
  width: 100%;
  background-color: whitesmoke;
  text-align: center;
  color: black;
}

.hide-consent-banner {
  position: relative;
  display: none;
  overflow: hidden;
  visibility: hidden;
  height: 0;
  text-align: center;
}

